<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    
   
   
    <string name="timer">1:12</string>
    
   
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    
    
    <string name="app_name">Speed Limits by Wikispeedia</string>
    
    <string name="hello">Hello World, Canvastutorial!</string>
    <string name="about_translate">Enter Sign Value</string>
    <string name="about_settings">Settings2</string>
    <string name="submitting_text_house">Granny says: \nYour house is scary, \nlets go for a drive...</string>
    <string name="title_info">Speed Limit</string>
    <string name="app_descrip">Provides Speed Limit information while you drive.</string>
    <string name="username_text">Name</string>
    <string name="email_text">Email</string>
    <string name="all_text">Name=all</string>   
    <string name="rgb_text">r,g,b</string>  
    <string name="units_text">Mph / Kph </string>
    <string name="over_text">Over</string>
    <string name="syncnow_text">Sync Now?</string>
    <string name="radius_text">Search radius</string>
    <string name="delete_text">Sign deleted...</string>
    <string name="settings_submit">Submit</string>
    <string name="about_title">Wait</string>
    <string name="about_title2">Wikispeedia.org (profit sharing)</string>
    <string name="main1_title">Press when passing a Speed Limit sign.</string>  
    <string name="about_label1">25</string>
    <string name="about_label2">30</string>
    <string name="about_label3">35</string>
    <string name="about_label4">40</string>
    <string name="about_label5">45</string>
    <string name="about_label6">50</string>
    <string name="about_label7">55</string>
    <string name="about_label8">60</string>
    <string name="about_label9">65</string>
    <string name="about_label10">70</string>
    <string name="about_label11">75</string>
    <string name="about_label12">80</string> 
    <string name="settings_label">Settings</string>
    <string name="submitting_text">Submitting sign to Wikispeedia.org...</string>
    <string name="about_textsettings">Settings...</string>
    <string name="theSpeedLimitIs_text">The speed limit is:</string>  
    
    
    
       <string name="app_version">1.1.1</string>
 
 
	<string name="alert_dialog_no_bt">Cannot use this application without bluetooth.</string>
	<string name="alert_dialog_yes">Yes</string>
	<string name="alert_dialog_no">No</string>
	<string name="alert_dialog_warning_title">Warning</string>
	<string name="alert_dialog_ok">Ok</string>
	<string name="alert_dialog_turn_on_bt">This application needs the Bluetooth. Do you want turn on?</string>

	<string name="toast_connected_to">Connected to</string>
	<string name="toast_unable_to_connect">Unable to connect device</string>
	<string name="toast_connection_lost">Device connection was lost</string>
			
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect device</string>
    <string name="disconnect">Disconnect device</string>
    <string name="preferences">Preferences</string>    
    <string name="special_keys">Special keys</string>
    
    <!-- Preference dialog -->
    <string name="general_preferences">General</string>

    <string name="title_localhecho_preference">Local echo</string>
    <string name="summary_localecho_preference">Display the key strokes</string>

    <string name="title_allowinsecureconnections_preference">Allow insecure connections</string>
    <string name="summary_allowinsecureconnections_preference">Allow bluetooth insecure connections</string>
    
	<string name="incoming_end_of_line">Incoming End of Line</string>
	<string name="outgoing_end_of_line">Outgoing End of Line</string>

    <string name="title_end_of_line_0D_preference">CR (0x0D) character</string>
    <string name="summary_end_of_line_0D_preference"></string>
    <string name="dialog_title_incoming_end_of_line_0D_preference">Incoming CR (0x0D) character</string>
    <string name="dialog_title_outgoing_end_of_line_0D_preference">Outgoing CR (0x0D) character</string>
    
    <string name="title_end_of_line_0A_preference">LF (0x0A) character</string>
    <string name="summary_end_of_line_0A_preference"></string>
    <string name="dialog_title_incoming_end_of_line_0A_preference">Incoming LF (0x0A) character</string>
    <string name="dialog_title_outgoing_end_of_line_0A_preference">Outgoing LF (0x0A) character</string>    

    <string name="text_preferences">Text</string>

    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>

    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>

    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>

    <string name="title_document_key_press">Press</string>
    <string name="title_document_key_rest">and Key</string>
    
    <string name="menu_start_logging">Camera</string>
    <string name="menu_stop_logging">Stop logging</string>
    <string name="menu_logging_started">Logging started</string>
    <string name="menu_logging_stopped">Logging stopped</string>
    <string name="menu_about">About</string>
    
    <string name="title_screenorientation_preference">Screen orientation</string>
    <string name="summary_screenorientation_preference">Choose the screen orientation</string>
    <string name="dialog_title_screenorientation_preference">Screen orientation</string>
    
    <string name="pymasde_es">Bluetooth from http://pymasde.es/</string>

   <!-- Don't localize these default values -->
   <string name="default_value_localecho_preference">false</string>
   <string name="default_value_allowinsecureconnections_preference">true</string>
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">2</string>
   <string name="default_value_controlkey_preference">0</string>
   <string name="default_value_end_of_line_0D_preference">13</string>
   <string name="default_value_end_of_line_0A_preference">10</string>
   <string name="default_screenorientation_preference">0</string>
   <string name="textview">TextView</string>
   <string name="username">Username</string>
   
    
    
    
</resources>
